actualizacion de html y jsdel splash

--- a/views/login.html
+++ b/views/login.html
@@ -8,6 +8,17 @@
 	<title>SOS Vial</title>
 </head>
 <body>
+
+	<section class="container">
+		<section class="row">
+			<section class="col s8 offset-s2">
+				<form action="">
+					
+				</form>
+			</section>
+		</section>
+	</section>
+
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
