formulario con prediccion de ubicacion

--- a/views/login.html
+++ b/views/login.html
@@ -13,7 +13,8 @@
 		<section class="row">
 			<section class="col s8 offset-s2">
 				<form action="">
-					
+				<h1>Prueba1</h1>
+
 				</form>
 			</section>
 		</section>
