--- a/views/login.html
+++ b/views/login.html
@@ -4,22 +4,65 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!--
 	<link rel="stylesheet" href="../node_modules\materialize-css\dist\css\materialize.min.css">
+-->
 	<title>SOS Vial</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" />
+	<link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
 
-	<section class="container">
-		<section class="row">
-			<section class="col s8 offset-s2">
-				<form action="">
-					
-				</form>
-			</section>
-		</section>
-	</section>
 
+<section class="contenedor-general">
+
+        <div class="row">
+            <div class="col m4 offset-m4 s4 offset-s4 botones center ">
+
+                <a id="id-google" class="btn-large  red darken-1"><i class="fa fa-google-plus center " aria-hidden="true"></i>Login with Google+ </a>
+            </div>
+
+
+        </div>
+        <div class="row">
+
+            <div class="col m4 offset-m4 s4 offset-s4 formulario center">
+                <h5>registrate o Ingresa</h5>
+
+                <div class="input-field">
+                    <input id="txtEmail" placeholder="username or email" type="email" class="validate">
+                    <!--<label for="first_name">user/email</label>-->
+                </div>
+
+                <div class="input-field">
+                    <input placeholder="password" id="txtPassword" type="password" class="validate">
+                    <!--<label for="first_name">password</label>-->
+                </div>
+
+                <div class="row">
+
+                    <div class="col m12 s12 center">
+
+                        <button class="btn  red" type="button" name="action" id="btnSignUp">
+                      Registrate
+  </button>
+
+                        <button class="btn  red" type="button" name="action" id="btnLogin">
+                 Ingresa
+  </button>
+                
+                <button class="btn  red" type="button" name="action" id="btnLogout">
+                 Salir
+  </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!--
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
+-->
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../js/login.js" charset="utf-8"></script>
