comenzando la validacion

--- a/views/formulario.html
+++ b/views/formulario.html
@@ -23,33 +23,33 @@
         </ul>
       </div>
     </nav>
-	<div class="input-field col s6 locationField">
+		<div class="input-field col s6 locationField">
       <input id="autocompletar" type="text" class="validate" placeholder="">
       <label for="ubicacion">Ingresa tu ubicación</label>
     </div>
-	<div class="input-field col s10 offset-s1">
+		<div class="input-field col s10 offset-s1">
 	  	<input id="nombre" type="text" class="validate">
-		<label for="first_name">Nombre</label>
-	</div>
-	<div class="input-field col s10 offset-s1">
-	 		 <input id="apellido" type="text" class="validate">
-	  		<label for="last_name">Apellido</label>
-	</div>
-	<div class="input-field col s10 offset-s1">
-	  		<input id="celular" type="number" class="validate">
-	  		<label for="celphone">Celular</label>
-	</div>
-	<div class="input-field col s10 offset-s1">
-	  		<input id="placas" type="text" class="validate">
-	  		<label for="placas">Placas</label>
-	</div>
+			<label for="first_name">Nombre</label>
+		</div>
+		<div class="input-field col s10 offset-s1">
+	 		<input id="apellido" type="text" class="validate">
+	  	<label for="last_name">Apellido</label>
+		</div>
+		<div class="input-field col s10 offset-s1">
+	  	<input id="celular" type="number" class="validate">
+	  	<label for="celphone">Celular</label>
+		</div>
+		<div class="input-field col s10 offset-s1">
+	  	<input id="placas" type="text" class="validate">
+	  	<label for="placas">Placas</label>
+		</div>
 
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCupoJfHh-XB6cGEuDRwoHk9UKJyApFOH8&libraries=places&callback=initAutocomplete" async></script>
 	<script src="../js/formulario.js" charset="utf-8"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
-	<script src="..\node_modules\materialize-css\dist\js\materialize.min.js" charset="utf-8"></script>
+	<script src="../node_modules/materialize-css/dist/js/materialize.min.js" charset="utf-8"></script>
 
 </body>
 </html>
