acomodo grid login.html

--- a/views/login.html
+++ b/views/login.html
@@ -16,7 +16,7 @@
 <section class="contenedor-general">
 
         <div class="row">
-            <div class="col m4 offset-m4 s4 offset-s4 botones center ">
+            <div class="col s10 offset-s1 botones center ">
 
                 <a id="id-google" class="btn-large  red darken-1"><i class="fa fa-google-plus center " aria-hidden="true"></i>Login with Google+ </a>
             </div>
@@ -25,7 +25,7 @@
         </div>
         <div class="row">
 
-            <div class="col m4 offset-m4 s4 offset-s4 formulario center">
+            <div class="col s10 offset-s1 formulario center">
                 <h5>registrate o Ingresa</h5>
 
                 <div class="input-field">
@@ -49,7 +49,7 @@
                         <button class="btn  red" type="button" name="action" id="btnLogin">
                  Ingresa
   </button>
-                
+
                 <button class="btn  red" type="button" name="action" id="btnLogout">
                  Salir
   </button>
