--- a/public/views/formulario.html
+++ b/public/views/formulario.html
@@ -23,26 +23,37 @@
         </ul>
       </div>
     </nav>
-		<div class="input-field col s6 locationField">
-      <input id="autocompletar" type="text" class="validate" placeholder="">
-      <label for="ubicacion">Ingresa tu ubicación</label>
-    </div>
-		<div class="input-field col s10 offset-s1">
-	  	<input id="nombre" type="text" class="validate">
-			<label for="first_name">Nombre</label>
+
+		<!-- area para los datos de los usuarios-->
+		<div class="container">
+			<div class="row">
+				<div class="input-field col s10 col offset-1 locationField">
+		      <input id="autocompletar" type="text" class="validate" placeholder="Ingresa tu ubicación">
+		      <label for="ubicacion"></label>
+		    </div>
+				<div class="input-field col s10 offset-s1">
+			  	<input id="nombre" type="text" placeholder="Nombre" class="validate">
+					<label for="first_name"></label>
+				</div>
+				<div class="input-field col s10 offset-s1">
+			 		<input id="apellido" type="text" placeholder="Apellido" class="validate">
+			  	<label for="last_name"></label>
+				</div>
+				<div class="input-field col s10 offset-s1">
+			  	<input id="celular" type="number" placeholder="Celular" class="validate">
+			  	<label for="celphone"></label>
+				</div>
+				<div class="input-field col s10 offset-s1">
+			  	<input id="placas" type="text" class="validate" placeholder="Placas">
+			  	<label for="placas"></label>
+				</div>
+				<div class="col s4 col offset-s3">
+          <button type="submit" name="button">Ingresar Datos</button>					
+				</div>
+			</div>
+
 		</div>
-		<div class="input-field col s10 offset-s1">
-	 		<input id="apellido" type="text" class="validate">
-	  	<label for="last_name">Apellido</label>
-		</div>
-		<div class="input-field col s10 offset-s1">
-	  	<input id="celular" type="number" class="validate">
-	  	<label for="celphone">Celular</label>
-		</div>
-		<div class="input-field col s10 offset-s1">
-	  	<input id="placas" type="text" class="validate">
-	  	<label for="placas">Placas</label>
-		</div>
+
 
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
