cambio en la la estructura de la grid del formulario.html

--- a/public/views/formulario.html
+++ b/public/views/formulario.html
@@ -48,7 +48,7 @@
 			  	<label for="placas"></label>
 				</div>
 				<div class="col s4 col offset-s3">
-          <button type="submit" name="button">Ingresar Datos</button>					
+          <button id="boton" type="submit" name="button">Ingresar Datos</button>
 				</div>
 			</div>
 
