actualizaciones para el navbar

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -8,6 +8,7 @@
 	<title>SOS Vial</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" />
 	<link rel="stylesheet" href="../css/login.css">
+	<link rel="stylesheet" href="/../css/main.css">
 </head>
 <body>
 
