--- a/public/views/ubicacion.html
+++ b/public/views/ubicacion.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="/../node_modules/materialize-css/dist/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="/../css/ubicacion.css">
+	<link rel="stylesheet" href="/../css/main.css">
 </head>
 <body>
 	<nav>
@@ -31,21 +32,20 @@
 			<section id="map"></section>
 			<section class="row">
 				<section class="col s8 offset-s2">
-					<a class="waves-effect waves-light btn" href="../views/historial.html">Enviar Solicitud</a>
+					<a class="waves-effect waves-light btn" href="../views/formulario.html">Enviar Solicitud</a>
 				</section>
 			</section>
 		</section>
 	</section>
 
-    
+
 	<script src="/../node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
-	<script src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
-	<script src="/../node_modules/materialize-css/dist/js/materialize.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCupoJfHh-XB6cGEuDRwoHk9UKJyApFOH8" async></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+	<script src="/../node_modules/materialize-css/dist/js/materialize.min.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../js/ubicacion.js" charset="utf-8"></script>
 	<script src="../js/navbar.js" charset="utf-8"></script>
-	
+
 </body>
 </html>
