--- a/public/views/formulario.html
+++ b/public/views/formulario.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../node_modules\materialize-css\dist\css\materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="/../css/main.css">
 	<title>SOS Vial</title>
 </head>
 <body>
