agregar logo en el nav

--- a/public/views/historial.html
+++ b/public/views/historial.html
@@ -9,6 +9,20 @@
 	<title>SOS Vial</title>
 </head>
 <body>
+	<nav>
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo"><img class="right" src="../assets/img/logo.png" id="logoNav" alt=""></a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="../views/historial.html">Historial</a></li>
+          <li><a href="../index.html">Cerrar Sesión</a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="../views/historial.html">Historial</a></li>
+          <li><a href="../index.html">Cerrar Sesión</a></li>
+        </ul>
+      </div>
+    </nav>
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
