--- a/public/views/formulario.html
+++ b/public/views/formulario.html
@@ -12,7 +12,7 @@
 <body>
 	<nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo"><img class="right" src="../assets/img/logoBlanco.png" id="logoNav" alt=""></a>
+        <a href="#!" class="brand-logo"><img class="right" src="../assets/img/logo.png" id="logoNav" alt=""></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="../views/historial.html">Historial</a></li>
