--- a/public/views/alerta.html
+++ b/public/views/alerta.html
@@ -5,11 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../node_modules\materialize-css\dist\css\materialize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
 	<link rel="stylesheet" href="/../css/main.css">
 	<title>SOS Vial</title>
 </head>
 <body>
+
+	<section class="container">
+		<section class="row">
+			<section class="col s10 offset-s1" id="contenedorAlerta">
+
+			</section>
+		</section>
+	</section>
+
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js" charset="utf-8"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../js/alerta.js" charset="utf-8"></script>
