actualizacion css botones

--- a/public/views/ubicacion.html
+++ b/public/views/ubicacion.html
@@ -28,7 +28,7 @@
 			<section id="map"></section>
 			<section class="row">
 				<section class="col s8 offset-s2">
-					<a class="waves-effect waves-light btn" href="../views/formulario.html">Enviar Solicitud</a>
+					<a class="waves-effect waves-light btn botonSolicitud" href="../views/formulario.html">Enviar Solicitud</a>
 				</section>
 			</section>
 		</section>
