--- a/public/views/formulario.html
+++ b/public/views/formulario.html
@@ -49,12 +49,7 @@
 			  	<label for="placas"></label>
 				</div>
 				<div class="col s4 col offset-s3">
-<<<<<<< HEAD
-          			<button type="submit" name="button" class="waves-effect waves-light btn botonSolicitud">Ingresar Datos</button>
-=======
-
-      				<button type="submit" name="button" class="waves-effect waves-light btn botonSolicitud">Ingresar Datos</button>	
->>>>>>> upstream/master
+          			<button type="submit" name="button" class="waves-effect waves-light btn botonSolicitud" href="../views/alerta.html">Ingresar Datos</button>
 				</div>
 			</div>
 
