--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,9 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--
-	<link rel="stylesheet" href="../node_modules\materialize-css\dist\css\materialize.min.css">
--->
+	<!--<link rel="stylesheet" href="../node_modules\materialize-css\dist\css\materialize.min.css">-->
 	<title>SOS Vial</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" />
 	<link rel="stylesheet" href="../css/login.css">
