--- a/public/views/ubicacion.html
+++ b/public/views/ubicacion.html
@@ -4,11 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="../node_modules\materialize-css\dist\css\materialize.min.css">
+	<!--<link rel="stylesheet" href="../node_modules\materialize-css\dist\css\materialize.min.css">-->
 	<title>SOS Vial</title>
 </head>
 <body>
+<!--
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
+-->
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../js/ubicacion.js" charset="utf-8"></script>
