--- a/public/views/ubicacion.html
+++ b/public/views/ubicacion.html
@@ -38,7 +38,7 @@
 
 
 	<script src="/../node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
-	<script src="../js/materialize.min.js"></script>
+	<script src="/../node_modules/materialize-css/dist/js/materialize.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCupoJfHh-XB6cGEuDRwoHk9UKJyApFOH8" async></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
