navbar empieza a funcionar y prueba de autocompletado

--- a/public/views/ubicacion.html
+++ b/public/views/ubicacion.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>SOS Vial</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" />
 	<link rel="stylesheet" href="/../node_modules/materialize-css/dist/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="/../css/ubicacion.css">
@@ -36,12 +37,15 @@
 		</section>
 	</section>
 
-
+    
 	<script src="/../node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
+	<script src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
 	<script src="/../node_modules/materialize-css/dist/js/materialize.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCupoJfHh-XB6cGEuDRwoHk9UKJyApFOH8" async></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../js/ubicacion.js" charset="utf-8"></script>
+	<script src="../js/navbar.js" charset="utf-8"></script>
+	
 </body>
 </html>
