--- a/public/views/formulario.html
+++ b/public/views/formulario.html
@@ -63,6 +63,7 @@
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../node_modules/materialize-css/dist/js/materialize.min.js" charset="utf-8"></script>
 	<script src="../js/navbar.js" charset="utf-8"></script>
+	<script src="../js/login.js" charset="utf-8"></script>
 
 
 </body>
