--- a/public/views/historial.html
+++ b/public/views/historial.html
@@ -27,5 +27,6 @@
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../js/historial.js" charset="utf-8"></script>
+	<script src="../js/login.js" charset="utf-8"></script>
 </body>
 </html>
