--- a/public/views/ubicacion.html
+++ b/public/views/ubicacion.html
@@ -18,7 +18,7 @@
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="../views/historial.html">Historial</a></li>
-          <li><a id="btnLogout" href="../index.html">Cerrar Sesión</a></li>
+          <li><a href="../index.html">Cerrar Sesión</a></li>
         </ul>
       </div>
     </nav>
@@ -42,7 +42,7 @@
 	<script src="../js/general.js" charset="utf-8"></script>
 	<script src="../js/ubicacion.js" charset="utf-8"></script>
 	<script src="../js/navbar.js" charset="utf-8"></script>
-	<script src="../js/login.js" charset="utf-8"></script>
+	<!--<script src="../js/login.js" charset="utf-8"></script>-->
 
 </body>
 </html>
