inicio lista usuarios

--- a/public/views/historial.html
+++ b/public/views/historial.html
@@ -23,6 +23,13 @@
         </ul>
       </div>
     </nav>
+    
+    <div id="object">
+    	
+    </div>
+    
+    
+    
 	<script src="../node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="../js/general.js" charset="utf-8"></script>
